Closed Bug 485433 Opened 16 years ago Closed 16 years ago

libsydneyaudio alsa backend handles write size incorrectly

Categories

(Core :: Audio/Video, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cajbir, Assigned: cajbir)

References

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

The Alsa backend for libsydneyaudio writes audio chunks out in 'period_size' increments. If the write is less than this size it still adjust the write buffer by 'period_size' amount. This is Annodex trac issue 458: https://trac.annodex.net/ticket/458 It is in libsydneyaudio svn r3892. We should update to latest libsydneyaudio trunk to get this and other fixes we patch locally.
Flags: blocking1.9.1?
Blocks: 466699
This can be checked in under an existing rs=roc for media third party code. I think this should be blocking1.9.1+ - it's needed for bug 466699 which is blocking1.9.1+.
Keywords: checkin-needed
Whiteboard: [needs landing]
Holding off landing until fix for bug 485642 is in libsydneyaudio.
Keywords: checkin-needed
Whiteboard: [needs landing]
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [baking for 1.9.1]
Blocks: 485642
Flags: blocking1.9.1? → blocking1.9.1+
Whiteboard: [baking for 1.9.1] → [needs 191 landing]
Depends on: 495794
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: