Bug 485433 - Fix incorrect write size handling in alsa backend of libsydneyaudio - rs=roc